--- a/logistics-provider-suser/src/main/resources/application.properties
+++ b/logistics-provider-suser/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8084
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/logistics?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://192.168.1.144:3306/logistics?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 
