--- a/logistics-api/pom.xml
+++ b/logistics-api/pom.xml
@@ -52,6 +52,12 @@
             <version>5.1.18.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>9.0.38</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
