--- a/logistics-provider/src/main/resources/application.properties
+++ b/logistics-provider/src/main/resources/application.properties
@@ -19,3 +19,7 @@ dubbo.protocol.port=20800
 dubbo.protocol.host=localhost
 
 #dubbo.scan.basePackages  = com.ytc.service
+
+spring.data.elasticsearch.repositories.enabled=true
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+spring.data.elasticsearch.cluster-name=my-application
