--- a/logistics-api/pom.xml
+++ b/logistics-api/pom.xml
@@ -25,6 +25,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.10.159.ALL</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.11</version>
